syntax = "proto3";

option csharp_namespace = "GrpcServer";

package file;

import "google/protobuf/empty.proto";

service FileManager {
    rpc FileDownLoad (FileInfo) returns (stream BytesContent);
    rpc FileUpLoad (stream BytesContent) returns(google.protobuf.Empty);
}

message FileInfo{
    string Name = 1;
    string Extension = 2;
}
message BytesContent{
    int64 fileSize = 1;
    bytes buffer = 2;
    int32 readedByte = 3;
    FileInfo info = 4;
}

